fix: rename main file

--- a/src/example.html
+++ b/src/example.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ex">
+<html lang="en" ng-app="exampleApp">
 <head>
     <script src="../bower_components/angular/angular.js"></script>
     <script src="umTruncate.js"></script>
